--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - ECR_LOGIN_PASSWORD=$(aws ecr get-login-password --region $AWS_DEFAULT_REGION)
+      - docker login --username AWS --password $ECR_LOGIN_PASSWORD $ECR_REPOSITORY_URI
   build:
     commands:
       - echo Building frontend Docker image...
