--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,8 +16,8 @@ phases:
   post_build:
     commands:
       - echo Pushing frontend Docker image to Amazon ECR...
-      - docker tag stock-frontend-docker-image $ECR_REPOSITORY_URI/stock-frontend-docker-image
-      - docker push $ECR_REPOSITORY_URI/stock-frontend-docker-image
+      - docker tag stock-frontend-docker-image:latest $ECR_REPOSITORY_URI/stock-frontend-docker-image:latest
+      - docker push $ECR_REPOSITORY_URI/stock-frontend-docker-image:latest
       - echo Pushing backend Docker image to Amazon ECR...
-      - docker tag stock-backend-docker-image $ECR_REPOSITORY_URI/stock-backend-docker-image
-      - docker push $ECR_REPOSITORY_URI/stock-backend-docker-image
+      - docker tag stock-backend-docker-image:latest $ECR_REPOSITORY_URI/stock-backend-docker-image:latest
+      - docker push $ECR_REPOSITORY_URI/stock-backend-docker-image:latest
