--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
+version: '3.8'
+
 services:
   backend:
-    image: 878750742588.dkr.ecr.eu-north-1.amazonaws.com/stock-backend-docker-image:latest
+    build: ./apple-stock-backend
     container_name: stock-backend-docker-image
     ports:
       - '8080:8080'
@@ -8,7 +10,7 @@ services:
       - NODE_ENV=production
 
   frontend:
-    image: 878750742588.dkr.ecr.eu-north-1.amazonaws.com/stock-frontend-docker-image:latest
+    build: ./apple-stock
     container_name: stock-frontend-docker-image
     ports:
       - '80:80'
