test new environment for deployment

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,6 @@ version: 0.2
 artifacts:
   files:
     - '**/*'
-    - 'Dockerrun.aws.json'
-    - 'docker-compose.yml'
 
 phases:
   pre_build:
@@ -16,7 +14,7 @@ phases:
   build:
     commands:
       - echo Building frontend Docker image...
-      - docker build --build-arg REACT_APP_SERVER_URL=http://stockpriceapp-env.eba-5ps7asta.eu-north-1.elasticbeanstalk.com:8080 -t stock-frontend-docker-image ./apple-stock
+      - docker build --build-arg REACT_APP_SERVER_URL=http://Stockapplication2-env.eba-e3xj3spz.eu-north-1.elasticbeanstalk.com:8080 -t stock-frontend-docker-image ./apple-stock
       - echo Building backend Docker image...
       - docker build -t stock-backend-docker-image ./apple-stock-backend
   post_build:
